refactor PropertyComparisonProcessor (WIP)